2003-12-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/object-ui.c (sp_item_apply_transformation): New method
	(sp_item_menu): Added 'Apply transformation'

	* src/dialogs/export.c (sp_export_progress_callback): New method
	(sp_export_export_clicked): Added progress dialog

2003-12-12  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/sp-text.c: (sp_string_set_shape):
	Fixed a memory leak bug which caused with SP_TEXT_NEW_CONTENT

2003-12-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c (sp_export_dialog): Added background
	color picker

	* src/widgets/sp-color-preview.c (sp_color_picker_get_type): New
	widget type
	(sp_color_preview_paint): Allow toggling transparent/opaque areas
	(sp_color_preview_new): Signature change

2003-12-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-stroke.c (nr_bpath_stroke_bbox_union): Implement

2003-12-10  John Stracke  <francis@REMOVE_THISthibault.org>

	* src/dialogs/export.c (sp_export_area_toggled): Use visual bbox

	* src/sp-shape.c (sp_shape_bbox): Use visual bbox, if requested

	* src/sp-marker.c (sp_marker_union_bbox): New method

2003-12-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr-util.c (sp_repr_lookup_child_by_name): New method

	* src/main.c (sodipodi_segv_handler): Moved here

	* src/modules/gnome.c (sp_module_print_gnome_write): Implement

	* src/modules/kde.cpp (sp_module_print_kde_write): Implement

	* src/modules/win32.c (sp_module_print_win32_write): Implement

	* src/modules/ps.c (sp_module_print_plain_write): Implement

	* src/module.c (sp_modules_menu_new): New method
	(sp_modules_menu_about_new): Ditto
	(sp_modules_menu_append_node): Ditto
	(sp_modules_menu_about_append): Ditto
	(sp_modules_menu_action_append): Ditto
	(sp_modules_menu_action_activate): Ditto
	(sp_modules_init): Register everything internal
	(sp_module_setup): New method
	(sp_module_write): Ditto

2003-12-04  Mitsuru Oka  <oka326@parkcity.ne.jp>
