@@ -1,5 +1,10 @@
 2003-12-14  Lauris Kaplinski  <lauris@kaplinski.com>
 
+	* src/sp-object.h: Changed signature of ::remove_child, added
+	blocked flag
+
+	* src/sp-object.c (sp_object_repr_remove_child): Fail if blocked
+
 	* src/object-ui.c (sp_item_apply_transformation): New method
 	(sp_item_menu): Added 'Apply transformation'
 
